Fix dev server config; Fix margins on 'Tutorials' h3 on small screens

--- a/src/style.css
+++ b/src/style.css
@@ -183,4 +183,7 @@ a:active, #draw-button:active {
 		align-items: center;
 		flex-direction: column;
 	}
+	.nav-side h3 {
+		margin: 1rem 0 0 0;
+	}
 }
